PSARC 2004/124 pktool enhancements to support object migration and softtoken interoperability PSARC 2005/019 pktool(1) list/delete updates 4931202 Provide import utility from PKCS12 file to softtoken's keystore 5059459 provide utility to export-to-PKCS#12-file from softttoken 5059461 pktool(1) needs subcommands to list and delete objects in softtoken 6216772 update pktool(1) list/delete subcommands 6278459 add "tokens" subcommand to pktool(1) 6285539 E_NAME_USED_NOT_DEF2 lint error for ENGINE_load_builtin_engines

--- a/usr/src/cmd/cmd-crypto/pktool/Makefile
+++ b/usr/src/cmd/cmd-crypto/pktool/Makefile
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -30,24 +30,38 @@ PROG =	pktool
 
 OBJS =	pktool.o \
 	common.o \
-	setpin.o
+	derparse.o \
+	osslcommon.o \
+	p12common.o \
+	setpin.o \
+	list.o \
+	delete.o \
+	import.o \
+	export.o \
+	tokens.o
 
 include ../../Makefile.cmd
+include $(SRC)/lib/openssl/Makefile.openssl
 
 SRCS =	$(OBJS:%.o=%.c)
 POFILES = $(OBJS:%.o=%.po)
 POFILE = $(PROG)_msg.po
 
+CPPFLAGS += -I. $(OPENSSL_CPPFLAGS)
 CFLAGS += $(CCVERBOSE)
 
-LDLIBS += -lpkcs11 -lcryptoutil
+DYNFLAGS += $(OPENSSL_DYNFLAGS)
+LDFLAGS += $(OPENSSL_LDFLAGS)
+LDLIBS += -lpkcs11 -lcryptoutil -lcrypto -lldap
+
+LINTFLAGS += $(OPENSSL_LDFLAGS)
 
 .KEEP_STATE:
 
 all : $(PROG)
 
 $(PROG) : $(OBJS)
-	$(LINK.c) -o $@ $(OBJS) $(LDFLAGS) $(LDLIBS)
+	$(LINK.c) -o $@ $(OBJS) $(DYNFLAGS) $(LDLIBS)
 	$(POST_PROCESS)
 
 $(POFILE) : $(POFILES)
