6271998 gcc and cmd/mailx don't get along 6271054 gcc and cmd/find don't get along

--- a/usr/src/cmd/mailx/Makefile
+++ b/usr/src/cmd/mailx/Makefile
@@ -92,7 +92,7 @@ $(VEROBJ): $(VERSRC)
 
 # want to recreate version.c whenever (and only when) mailx needs to be rebuilt
 $(VERSRC): $(OBJS) $(LIBMAIL)
-	$(ECHO) "extern const char *const version=\"mailx version $(MAILXVERSION) `date`\";" > $@
+	$(ECHO) "const char *const version=\"mailx version $(MAILXVERSION) `date`\";" > $@
 
 install: all $(ROOTMAILXD) $(ROOTPROG) $(ROOTMAILXHELP) \
 	$(ROOTMAILXRC) $(ROOTUCBMAIL) $(ROOTUCBCAPMAIL) $(ROOTUCBMAILRC)
