PSARC/2004/364 dcam1394 driver 4841261 dcamctl links are not removed 5087103 IIDC (1394-based digital cameras) should be supported by Solaris 6261805 dcam1394 will cause a panic after being called to release its isoch resources multiple times

--- a/usr/src/pkgdefs/Makefile
+++ b/usr/src/pkgdefs/Makefile
@@ -173,6 +173,8 @@ COMMON_SUBDIRS= \
 	SUNWftduu \
 	SUNWftpr  \
 	SUNWftpu  \
+	SUNWfwdc  \
+	SUNWfwdcu  \
 	SUNWgssdh  \
 	SUNWgssc  \
 	SUNWgss	\
