--- a/usr/src/uts/sparc/Makefile.sparc
+++ b/usr/src/uts/sparc/Makefile.sparc
@@ -251,7 +251,7 @@ DRV_KMODS	+= hid hubd ehci ohci uhci usb_mid scsa2usb usbprn ugen
 DRV_KMODS	+= usbser usbser_edge
 DRV_KMODS	+= usb_as usb_ac
 DRV_KMODS	+= usbskel
-DRV_KMODS	+= hci1394 av1394 scsa1394
+DRV_KMODS	+= hci1394 av1394 scsa1394 dcam1394
 DRV_KMODS	+= sbp2
 DRV_KMODS	+= scsi_vhci
 DRV_KMODS	+= ib ibd
