--- a/usr/src/uts/sun4v/ontario/Makefile
+++ b/usr/src/uts/sun4v/ontario/Makefile
@@ -65,6 +65,7 @@ IMPLEMENTED_PLATFORM	= SUNW,Sun-Fire-T200
 
 install:	$(ROOT_ONTARIO_DIR) $(USR_ONTARIO_DIR) \
 		$(USR_ONTARIO_SBIN_DIR) \
+		$(USR_ONTARIO_LIB_DIR) \
 		.WAIT $(ONTARIO_KMODS)
 
 modlintlib:	$(ONTARIO_KMODS)
