--- a/usr/src/uts/sun4v/ontario/Makefile.ontario
+++ b/usr/src/uts/sun4v/ontario/Makefile.ontario
@@ -53,6 +53,7 @@ USR_SUN4V_PLAT_DIR	= $(USR_PLAT_DIR)/$(PLATFORM)
 USR_ONTARIO_DIR		= $(USR_PLAT_DIR)/SUNW,Sun-Fire-T200
 USR_ONTARIO_SBIN_DIR	= $(USR_ONTARIO_DIR)/sbin
 USR_ONTARIO_INC_DIR	= $(USR_ONTARIO_DIR)/include
+USR_ONTARIO_LIB_DIR	= $(USR_ONTARIO_DIR)/lib
 USR_ONTARIO_ISYS_DIR	= $(USR_ONTARIO_INC_DIR)/sys
 
 
