6241067 Sun4v Fire Error Handling support 6251092 sun4u Fire Error Handling support 6252403 Remove hardware registers access from common px code 6256158 Fire drivers call ddi_fm_init w/o proper FMA support 6258433 Bus nexus fatal error handling missing for Fire 6279331 pcie misc module is required

--- a/usr/src/uts/common/Makefile.files
+++ b/usr/src/uts/common/Makefile.files
@@ -1213,6 +1213,8 @@ INCLUDE_PATH    += $(INC_PATH) $(CCYFLAG)$(UTSBASE)/common
 #
 XGE_OBJS = xge.o xgell.o
 
+PCIE_OBJS += pcie.o
+
 XGE_HAL_OBJS =  xgehal-channel.o xgehal-fifo.o xgehal-ring.o  xgehal-config.o \
 		xgehal-driver.o  xgehal-mm.o xgehal-stats.o  xgehal-device.o \
 		xge-queue.o  xgehal-mgmt.o xgehal-mgmtaux.o
