--- a/usr/src/uts/sparc/Makefile.files
+++ b/usr/src/uts/sparc/Makefile.files
@@ -67,7 +67,7 @@ FD_OBJS	+=	fd_asm.o
 
 CPR_SPARC_OBJS +=	cpr_sparc.o
 PCI_PCI_OBJS +=		pci_pci.o pci_debug.o pci_pwr.o pcix.o
-PX_PCI_OBJS +=		px_pci.o px_debug.o px_pci_fm.o pcie_pwr.o
+PX_PCI_OBJS +=		px_pci.o px_debug.o pcie_pwr.o
 
 #
 #			file system modules
