6287497 openssl cpp flags needs to be adjusted for export builds

--- a/usr/src/lib/openssl/Makefile.openssl
+++ b/usr/src/lib/openssl/Makefile.openssl
@@ -76,6 +76,7 @@ OPENSSL_BUILD_CPPFLAGS = \
 	$(OPENSSL_NO_XXX)
 
 OPENSSL_CPPFLAGS =	-I$(ROOTSFWINCLUDE)
+OPENSSL_CPPFLAGS +=	-I$(PARENT_ROOT)$(SFWINCDIR)
 
 OPENSSL_LDFLAGS =	-L$(ROOT)$(SFWLIBDIR)
 OPENSSL_LDFLAGS +=	-L$(PARENT_ROOT)$(SFWLIBDIR)
