6280600  pciegfx ppm domain needs some clean up 6284428  SUNW,A70 platform should support CPU PM for both Jalapeno & Serrano

--- a/usr/src/uts/sun4u/chicago/io/ppm.conf
+++ b/usr/src/uts/sun4u/chicago/io/ppm.conf
@@ -87,7 +87,7 @@ ppm-domains="domain_cpu", "domain_diskfet1", "domain_diskfet2", "domain_diskfet3
 # 0x6a02 is JBPPMIOC_NEXT	(('j' << 8) | 2)
 # 0x6a03 is JBPPMIOC_GO		(('j' << 8) | 3)
 #
-domain_cpu-devices="/SUNW,UltraSPARC-IIIi+@*";
+domain_cpu-devices="/SUNW,UltraSPARC-IIIi@*", "/SUNW,UltraSPARC-IIIi+@*";
 domain_cpu-model="CPU";
 domain_cpu-control=
     "cmd=CPU_NEXT path=/ppm@1f,0:jbus-ppm method=CPUSPEEDKIO iowr=0x6a02 speeds=3",
@@ -133,8 +133,8 @@ domain_diskfet4-control =
 domain_led-devices = "";
 domain_led-model = "LED";
 domain_led-control =
-    "cmd=LED_ON path=/i2c@1f,530000/gpio@0,30 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x01 val=0x00",
-    "cmd=LED_OFF path=/i2c@1f,530000/gpio@0,30 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x01 val=0x01";
+    "cmd=LED_ON path=/i2c@1f,530000/gpio@0,30:pca9556_1 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x01 val=0x00",
+    "cmd=LED_OFF path=/i2c@1f,530000/gpio@0,30:pca9556_1 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x01 val=0x01";
 
 #
 # PCI Express Primary Graphics Slot (directly attached to root complex(Fire))
@@ -142,12 +142,12 @@ domain_led-control =
 domain_pciegfx-devices = "/pci@1f,700000/*";
 domain_pciegfx-model = "PCIE";
 domain_pciegfx-control =
-    "cmd=PRE_PWR_OFF path=/pci@1f,700000 method=KIO iowr=0x504D01 val=0x00",
-    "cmd=PRE_PWR_ON path=/pci@1f,700000 method=KIO iowr=0x504D02 val=0x00",
-    "cmd=POST_PWR_ON path=/pci@1f,700000 method=KIO iowr=0x504D03 val=0x00 post_delay=100000",
-    "cmd=CLK_OFF path=/i2c@1f,530000/gpio@0,30 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x10 val=0x00",
-    "cmd=CLK_ON path=/i2c@1f,530000/gpio@0,30 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x10 val=0x10",
-    "cmd=PWR_OFF path=/i2c@1f,530000/gpio@0,30 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x08 val=0x00",
-    "cmd=PWR_ON path=/i2c@1f,530000/gpio@0,30 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x08 val=0x08",
-    "cmd=RESET_OFF path=/i2c@1f,530000/gpio@0,30 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x04 val=0x04 delay=10000",
-    "cmd=RESET_ON path=/i2c@1f,530000/gpio@0,30 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x04 val=0x00";
+    "cmd=PRE_PWR_OFF path=/pci@1f,700000:devctl method=KIO iowr=0x504D0001 val=0x00",
+    "cmd=PRE_PWR_ON path=/pci@1f,700000:devctl method=KIO iowr=0x504D0002 val=0x00",
+    "cmd=POST_PWR_ON path=/pci@1f,700000:devctl method=KIO iowr=0x504D0003 val=0x00 post_delay=100000",
+    "cmd=CLK_OFF path=/i2c@1f,530000/gpio@0,30:pca9556_1 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x10 val=0x00",
+    "cmd=CLK_ON path=/i2c@1f,530000/gpio@0,30:pca9556_1 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x10 val=0x10",
+    "cmd=PWR_OFF path=/i2c@1f,530000/gpio@0,30:pca9556_1 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x08 val=0x00",
+    "cmd=PWR_ON path=/i2c@1f,530000/gpio@0,30:pca9556_1 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x08 val=0x08",
+    "cmd=RESET_OFF path=/i2c@1f,530000/gpio@0,30:pca9556_1 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x04 val=0x04 delay=10000",
+    "cmd=RESET_ON path=/i2c@1f,530000/gpio@0,30:pca9556_1 method=I2CKIO iowr=0x4D82 iord=0x0 mask=0x04 val=0x00";
