6289703 Remove SUNWust1u.v package -- we do not need it 6290564 Move sun4v PCBE to architecture specific /platform directory 6288882 fix the lint warnings caused by bugid 6263600

--- a/usr/src/Makefile.psm.targ
+++ b/usr/src/Makefile.psm.targ
@@ -20,7 +20,7 @@
 # CDDL HEADER END
 #
 #
-# Copyright 2004 Sun Microsystems, Inc.  All rights reserved.
+# Copyright 2005 Sun Microsystems, Inc.  All rights reserved.
 # Use is subject to license terms.
 #
 # ident	"%Z%%M%	%I%	%E% SMI"
@@ -104,6 +104,9 @@ $(ROOT_PSM_DACF_DIR)/%:		$(OBJS_DIR)/% $(ROOT_PSM_DACF_DIR) FRC
 	$(INS.file)
 
 $(ROOT_PSM_CRYPTO_DIR)/%:	$(OBJS_DIR)/% $(ROOT_PSM_CRYPTO_DIR) FRC
+	$(INS.file)
+
+$(ROOT_PSM_PCBE_DIR)/%:		$(OBJS_DIR)/% $(ROOT_PSM_PCBE_DIR) FRC
 	$(INS.file)
 
 #
