--- a/usr/src/cmd/su/Makefile
+++ b/usr/src/cmd/su/Makefile
@@ -52,7 +52,7 @@ $(ETCDFLTPROG) := FILEMODE = $(LIBFILEMODE)
 # A reduced su.static is created, with just enough functionality
 # to satisfy the needs of a single-user login with /usr not mounted.
 # In particular, nss_files.so.1 may be dlopen()'ed at runtime.
-$(ROOTFS_PROG) :=	LDLIBS += -lcmd -lbsm
+$(ROOTFS_PROG) :=	LDLIBS += -lcmd -lbsm -lpam
 
 # The standard su is fully functional.
 $(PROG) :=	CPPFLAGS += -DDYNAMIC_SU
