--- a/usr/src/uts/intel/Makefile.intel
+++ b/usr/src/uts/intel/Makefile.intel
@@ -317,6 +317,7 @@ DRV_KMODS	+= fasttrap
 DRV_KMODS	+= pshot
 DRV_KMODS	+= gen_drv
 DRV_KMODS	+= tvhci tphci tclient
+DRV_KMODS	+= emul64
 
 #
 #	Machine Specific Driver Modules (/kernel/drv):
